<resources>
    <string name="app_name">Central de Noticias</string>
    <string name="action_settings">sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">Sobre a Central de notícias</string>
    <string name="title_activity_detalhe_noticia">Detalhe da Notícia</string>
    <string name="title_activity_nova_noticia">Nova Notícia</string>
    <string name="autor_fragment">Autor Fragment</string>
    <string name="app_fragment">App Fragment</string>
    <string name="app">App</string>
    <string name="t_tulo">Título:</string>
    <string name="informativo">Informativo:</string>
    <string name="not_cia">Notícia:</string>
    <string name="data">Data:</string>
    <string name="app_central_de_not_cias_utilize_esse_app_para_ler_as_suas_not_cias_preferidas">App Central de Notícias. Utilize esse App para ler as suas notícias preferidas.</string>
    <string name="julio_cesar_grativol_estudando_mit_mobile_infnet">Julio Cesar Grativol. Estudando MIT Mobile Infnet</string>
    <string name="autor">Autor</string>
    <string name="informativ">Informativo</string>
</resources>
