<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.njinformatica.centralnoticias.DetalheNoticiaActivity"
    tools:showIn="@layout/activity_detalhe_noticia">

    <GridLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:overScrollMode="always"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/text_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/t_tulo" />

        <TextView
            android:id="@+id/text_informativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:padding="10dp"
            android:text="@string/informativo" />

        <TextView
            android:id="@+id/text_noticia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:padding="10dp"
            android:text="@string/not_cia" />

        <TextView
            android:id="@+id/text_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:padding="10dp"
            android:text="@string/data" />

        <TextView
            android:id="@+id/text_autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:padding="10dp"
            android:text="@string/autor" />

        <TextView
            android:id="@+id/text_titulo_content"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="" />

        <TextView
            android:id="@+id/text_informativo_content"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="" />

        <TextView
            android:id="@+id/text_noticia_content"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_marginRight="50dp"
            android:text="" />

        <TextView
            android:id="@+id/text_data_content"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:text="" />

        <TextView
            android:id="@+id/text_autor_content"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:text="" />

    </GridLayout>
</android.support.v7.widget.LinearLayoutCompat>
